finished mvp of game

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,39 @@
   border: 1px solid black;
   height: 150px;
 }
+
+#one{
+
+}
+
+#two{
+
+}
+
+#three{
+
+}
+
+#four{
+
+}
+
+#five{
+
+}
+
+#six{
+
+}
+
+#seven{
+
+}
+
+#eight{
+
+}
+
+#nine{
+
+}
